# HOG-People-Detection-GPU

./: .gitignore  CMakeLists.txt  README.md  times.csv  utilityFuncs.py
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  run
include/: timing.hpp
latexExtra/: report.aux  report.fdb_latexmk  report.fls  report.tex
report/: averagedData.csv
src/: CpuGpuHogtest.cpp  hogCpu.cpp  hogGpu.cpp  test  test.cpp  timing.cpp
timings/: gcpu-1-nthreads.txt  gcpu-10-nthreads.txt  gcpu-1024-nthreads.txt  gcpu-512-nthreads.txt  gcpu-standard.txt
